# splice

./: .clang-format  CMakeLists.txt  LICENSE  README.md
cmake/: spliceConfig.cmake.in
examples/: CMakeLists.txt  logging.cpp  middleware.cpp  testing.cpp  validation.cpp
include/: splice.cppm
include/splice/: hook.hpp  splice.hpp  wire.hpp
include/splice/detail/: assert.hpp  hook_chain.hpp  meta_core.hpp  meta_utils.hpp  priority.hpp  registry.hpp  result.hpp  shadow.hpp
include/splice/detail/hook/: hook_chain.hpp  meta_utils.hpp  registry.hpp
include/splice/detail/wire/: annotations.hpp  connectable.hpp  meta_utils.hpp  registry.hpp
tests/: CMakeLists.txt  test_priority.cpp  test_registry.cpp  test_shadow.cpp  test_wire.cpp
